<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="Math">Математика</string>
	<string name="Russian">Русский Язык(скоро будет здесь)</string>
	<string name="Physics">Физика(скоро будет здесь)</string>
	<string name="Belarussian">Беларуская Мова(хутка будзе тут)</string>

	<string name="SettingsButton">О приложении</string>
	
	<string name="app_name">Мобильный репетитор</string>
	<string name="descr_text"> Друзья, после запуска первой версии приложения, мы получили положительные отзывы и оценки. Спасибо вам. \n Сейчас мы запускаем вторую версию нашего приложения - вы найдете в ней что-то новое. Мы почти готовы к запуску серьезной версии приложения - но для этого нам нужно, чтобы вы ответили на пару вопросов нашей анкеты.\n Также, не забывайте ставить оценки и расказывать о приложении друзьям - все это приближает выпуск продвинутой версии с большим количеством заданий, теорией и другими фишками.\n И еще одна новость - в будущем, мы, возможно, будем сотрудничать с сайтом alma.by - это один из лучших сайтов для решения ЦТ. Попробуйте!</string>
	<string name="hint1"> Не спеши смотреть правильный ответ. Лушче попробовать решить задание несколько раз.</string>
	<string name="hint2"> Решать тесты каждый день по несколько заданий лучше, чем один раз, но много заданий.</string>
</resources>