<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:text="Мобильный репетитор"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AppName"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
        <Button
            android:id="@+id/MathButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Math"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp" />
        <Button
            android:text="@string/Russian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RusButton"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            android:enabled="false"
            android:hint="В стадии разработки" />
        <Button
            android:text="@string/Belarussian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BelButton"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:hint="У стадыі распрацоўкі" />
        <Button
            android:text="@string/Physics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PhysButton"
            android:hint="В стадии разработки"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:enabled="false" />
        <RelativeLayout
            android:minWidth="25px"
            android:minHeight="25px"
            android:id="@+id/relativeLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/alma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/almaButton"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
            <TextView
                android:text="Попробуй порешать тесты на alma.by"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/almaTextView"
                android:layout_toRightOf="@id/almaButton"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:minWidth="25px"
            android:minHeight="25px"
            android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/anketa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/anketaButton"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
            <TextView
                android:text="Помоги улучшить приложение, ответив на вопросы анкеты"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/anketaTextView"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/anketaButton" />
        </RelativeLayout>
        <RelativeLayout
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout1">
            <ImageButton
                android:src="@drawable/play_store_icon"
                android:id="@+id/marketButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:text="Оставь свою оценку или комментарий в Google Play"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/marketTextView"
                android:layout_toRightOf="@id/marketButton"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout2">
            <ImageButton
                android:src="@drawable/vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vkButton"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:text="Задай вопрос или предложи что-то новое"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vkTextView"
                android:layout_toRightOf="@id/vkButton"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout3">
            <ImageButton
                android:src="@drawable/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareButton"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp" />
            <TextView
                android:text="Отправь ссылку другу. Пускай готовиться к поступлению с нами"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareTextView"
                android:layout_toRightOf="@id/shareButton"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/descr_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
        <TextView
            android:text="©Flaxtreme(Alkor) alkor1@yandex.ru"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:gravity="center" />
        <TextView
            android:text="Материал взят со сборника &quot;Практикум по математике&quot; Веременюк, Кожушко, &quot;ТетраСистемс&quot; 2009 год."
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="100dp" />
    </LinearLayout>
</ScrollView>